--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,6 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true">
 
-    <!--划出菜单后，最大剩余部分为65dp-->
-    <FrameLayout
-        android:id="@+id/left_frame"
-        android:layout_width="280dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="left">
-    </FrameLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -84,6 +77,12 @@
                 android:textColor="@color/guidetext_color" />
         </RadioGroup>
     </LinearLayout>
+
+    <FrameLayout
+        android:id="@+id/left_frame"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"></FrameLayout>
 
     <!--划出菜单后，最大剩余部分为65dp-->
     <FrameLayout
