--- a/app/src/main/res/layout/fragment_left.xml
+++ b/app/src/main/res/layout/fragment_left.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="240dp"
     android:layout_height="match_parent"
-    android:background="#BFBFBF"
+    android:background="#ffffff"
     android:orientation="vertical"
     android:gravity="center_horizontal">
 
