--- a/app/src/main/res/layout/fragment_classify.xml
+++ b/app/src/main/res/layout/fragment_classify.xml
@@ -33,16 +33,14 @@
 
         <ListView
             android:id="@+id/listView"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"></ListView>
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"></ListView>
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <GridLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"></GridLayout>
-        </ScrollView>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="3"></android.support.v4.view.ViewPager>
     </LinearLayout>
 </LinearLayout>
