--- a/app/src/main/res/layout/fragment_classify.xml
+++ b/app/src/main/res/layout/fragment_classify.xml
@@ -35,7 +35,9 @@
             android:id="@+id/listView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"></ListView>
+            android:layout_weight="1"
+            android:divider="#00000000"
+            android:dividerHeight="0dp"></ListView>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
