--- a/app/src/main/res/drawable/class_choosed_txt.xml
+++ b/app/src/main/res/drawable/class_choosed_txt.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="#CC0000" android:state_focused="true" /> <!-- focused -->
-    <item android:color="#CC0000" android:state_pressed="true" /> <!-- pressed -->
-    <item android:color="#CC0000" android:state_selected="true" /> <!-- pressed -->
-    <item android:color="#000000" /> <!-- default -->
+    <item android:color="#CC0000" /> <!-- default -->
 </selector>
