--- a/app/src/main/res/layout/fragment_classify.xml
+++ b/app/src/main/res/layout/fragment_classify.xml
@@ -36,7 +36,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:background="#BFBFBF"
+            android:choiceMode="singleChoice"
             android:divider="#00000000"
             android:dividerHeight="0dp"></ListView>
 
