--- a/app/src/main/res/layout/child_list_item.xml
+++ b/app/src/main/res/layout/child_list_item.xml
@@ -6,10 +6,14 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="33dp"
+        android:gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
 
         <TextView
             android:id="@+id/list2"
+            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello" />
@@ -17,6 +21,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_alignTop="@+id/more"
             android:layout_toLeftOf="@+id/more"
             android:text="more" />
 
@@ -30,7 +36,7 @@
 
     <com.example.sanfuproject.activity.view.MyGridView
         android:id="@+id/gridView"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="10dp"
