--- a/app/src/main/res/layout/child_list_item.xml
+++ b/app/src/main/res/layout/child_list_item.xml
@@ -7,23 +7,23 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="33dp"
-        android:gravity="center"
         android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_marginRight="10dp"
+        android:gravity="center">
 
         <TextView
             android:id="@+id/list2"
-            android:gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="Hello" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_alignTop="@+id/more"
             android:layout_toLeftOf="@+id/more"
+            android:gravity="center"
             android:text="more" />
 
         <ImageView
