--- a/app/src/main/res/layout/childfrag_listview.xml
+++ b/app/src/main/res/layout/childfrag_listview.xml
@@ -7,5 +7,6 @@
     <com.example.sanfuproject.activity.view.MyListView
         android:id="@+id/child_listView"
         android:layout_width="match_parent"
+        android:scrollbars="none"
         android:layout_height="wrap_content"></com.example.sanfuproject.activity.view.MyListView>
 </LinearLayout>
